Added Transfer functionality

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -32,7 +32,8 @@
                 </ul>
                 <div class="card-body row">
 
-                    <a href="#" class="card-link btn btn-info mb-3 col-10 offset-1">Transfer Money</a>
+                    <a href="/transaction/user/<%= user._id %>"
+                        class="card-link btn btn-info mb-3 col-10 offset-1">Transfer Money</a>
                     <br>
                     <a href="#" class="card-link btn btn-info mb-3 col-10 offset-1">View Transactions</a>
                     <br>
