Added History Functionality(Incomplete)

--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,5 +1,9 @@
 <% layout('layouts/boilerplate')%>
-<h1 class="text-center text-success">TRANSACTION SUCCESSFUL !!</h1>
-<a href="/">
-    <button class="mx-auto ml-auto btn btn-info">Home Page</button>
-</a>
+    <h1 class="text-center text-success">TRANSACTION SUCCESSFUL !!</h1>
+    <div class="row mt-5">
+        <div class="col-2 offset-5">
+            <a href="/">
+                <button class="btn btn-info">Home Page</button>
+            </a>
+        </div>
+    </div>
