--- a/views/user.ejs
+++ b/views/user.ejs
@@ -35,7 +35,8 @@
                     <a href="/transaction/user/<%= user._id %>"
                         class="card-link btn btn-info mb-3 col-10 offset-1">Transfer Money</a>
                     <br>
-                    <a href="#" class="card-link btn btn-info mb-3 col-10 offset-1">View Transactions</a>
+                    <a href="/history/user/<%= user._id %>" class="card-link btn btn-info mb-3 col-10 offset-1">View
+                        Transactions</a>
                     <br>
                     <a href="/" class="card-link btn btn-info mb-3 col-10 offset-1">Home Page</a>
                 </div>
