Transactions History Added

--- a/views/history.ejs
+++ b/views/history.ejs
@@ -32,6 +32,10 @@
             </tbody>
         </table>
     </div>
-    <div class="Home">
-        <a class="back" href="/">Home Page</a>
+    <div class="row mt-5">
+        <div class="col-2 offset-5">
+            <a href="/">
+                <button class="btn btn-info">Home Page</button>
+            </a>
+        </div>
     </div>
