--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -18,9 +18,9 @@
         <%- body %>
 
     </main>
-    <footer class="bg-light text-center text-lg-start fixed-bottom">
+    <footer class="bg-light text-center text-lg-start fixed-bottom mt-3">
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.1);">
             © 2023 Basic Banking System By-MUKUL BHALLA
             <a class="text-dark" href="https://www.linkedin.com/in/mukul-bhalla" target="_blank">Connect With Me.</a>
         </div>
