--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
     <h1 class="text-center">Welcome To Our Website</h1>
     <br>
     <h2 class="text-center mb-3">Customers</h2>
-    <div class="row">
+    <div class="row mb-5">
         <% for(let user of allUser) { %>
             <div class="col-md-4 offset-md-4 mb-4 d-grid gap-2">
                 <a class="btn btn-info btn-lg" href="/user/<%=user._id%>">
