--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -13,12 +13,12 @@
 
 <body class="d-flex flex-column vh-100 ">
 
-    <main class="container mt-5">
+    <main class="container mt-5 mb-3">
 
         <%- body %>
 
     </main>
-    <footer class="bg-light text-center text-lg-start fixed-bottom">
+    <footer class="bg-light text-center text-lg-start fixed-bottom mt-3 ">
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2023 Basic Banking System By-MUKUL BHALLA
