--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -20,7 +20,7 @@
     </main>
     <footer class="footer bg-dark py-3 mt-auto text-center">
         <div class="container ">
-            <span class="text-light">&copy;Banking App 2023 : <a
+            <span class="text-light">&copy;Banking App <%= new Date().getFullYear() %> : <a
                     href="https://www.linkedin.com/in/mukul-bhalla/">Connect With Me</a></span>
         </div>
     </footer>
